inside alignment fixes

--- a/test/css/inside.css
+++ b/test/css/inside.css
@@ -379,7 +379,7 @@ html, body {
 .poster{
   position:relative;
   height: 78%;
-  width: 7%;
+  width: 6%;
   margin-left:30px;
   top:10%;
   background: #5665aa;
